package fiuba.algo3.modelo;

public interface ObservadorDibujo{
    void actualizar(Boolean bool, Posicion posicionInicial, Posicion posicionFinal);
}
